fixed outdated packages, fixed body overflow, made anime details hide if blank anime is selected, made anime list scrollable

--- a/client/src/app/layout/styles.css
+++ b/client/src/app/layout/styles.css
@@ -1,3 +1,6 @@
+html, body {
+    overflow: hidden;
+}
 .app-container {
     margin-top: 7em;
 }
